@@ -1,3 +1,9 @@
+2008-10-15  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-25-11
+	* browser/WebContent/get.jsp: change default for 'format' to
+	'python' (was: 'ascii')
+
 2008-09-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-25-10
